--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "MERN Backend",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "18.1.0"
+  },
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
